kubernetes/overlays/staging/patches/fastapi-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  template:
    spec:
      containers:
        - name: api
          image: ghcr.io/sunba23/sunbadev-nginx:staging
          imagePullPolicy: Always
