kubernetes/overlays/staging/patches/nginx-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  template:
    spec:
      containers:
        - name: nginx
          image: ghcr.io/sunba23/sunbadev-nginx:staging
          imagePullPolicy: Always
