kubernetes/overlays/staging/patches/traefik-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: kube-system
spec:
  template:
    spec:
      containers:
        - name: traefik
          args:
            - "--providers.kubernetes.ingressNamespaces=default,staging"
