kubernetes/overlays/staging/patches/traefik-resources.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-sunbadev
spec:
  template:
    spec:
      serviceAccountName: default
      containers:
        - name: traefik
          args:
            - --api=true
            - --providers.kubernetesingress=true
            - --entrypoints.web.address=:80
            - --entrypoints.websecure.address=:443
            - --providers.kubernetesingress.ingressclass=traefik-sunbadev-staging
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-sunbadev
spec:
  type: LoadBalancer
  selector:
    app: traefik-sunbadev
  ports:
    - name: web
      port: 80
      targetPort: 80
    - name: websecure
      port: 443
      targetPort: 443
