kubernetes/overlays/staging/patches/ingress-resources.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  annotations:
    kubernetes.io/ingress.class: traefik-sunbadev-staging
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  ingressClassName: traefik-sunbadev-staging
  tls:
  - hosts:
    - staging.sunba.dev
    secretName: sunba-staging-tls
  rules:
  - host: staging.sunba.dev
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: traefik-sunbadev-staging
